[package]
name = "my_vmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-bindings = "0.6.0"
kvm-ioctls = "0.13.0"
vm-memory = {version = "0.10.0", features = ["backend-mmap"]}
vmm-sys-util = "0.11.1"